# Aperture

./: (prob not)_APERTURE_DEMO_AGENT.md  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  APERTURE_CODING_AGENT_EXECUTION_PLAN.md  APERTURE_PROJECT_PLAN.md  DEMO.md  HACKATHON_RESEARCH_DEEP_DIVE.md  Makefile  README.md  TEST_PULL_REQUEST.md  TRANSFER.md  demo.cast  demo_agent.cast  demo_benchmark.cast  demo_dynamic.cast  pyproject.toml
.claude/: settings.local.json
aperture/: AGENTS.md  SCOPE.md  __init__.py  cli.py  config.py  contracts.py  integration.py  types.py
aperture-v1-dashboard/: AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
aperture-v1-dashboard/src/: Layout.tsx  api.ts  main.tsx
aperture/adapters/: __init__.py  langgraph.py
aperture/agent/: composio_agent.py  tool_cache.py
aperture/benchmarks/: __init__.py  evaluators.py  harness.py  metrics.py  report.py  runner.py  task_set.py  vanilla_vs_aperture.py  vs_rtk.py
aperture/cache/: __init__.py  bypass.py  interceptor.py  key_builder.py  (+7 more)
aperture_data/: aperture.db
api/: main.py
dashboard/: app.py
data/: github_users_10k.csv  linear_issues_200.json  notion_pages_500.json  supabase_users_1000.json
design/: ARK_DESIGN_BIBLE.md  README.md  component-recipes.md  components.json  material3-foundations.md  shadcn-stack.md  tokens.css  tokens.ts
docs/: APERTURE_PROJECT_PLAN.md  APERTURE_SIGNAL_STUDIO.md  AUCCTUS_APERTURE_PROTOTYPE_STUDIO.md  Aperture_V2_workingon.md  CASE_STUDY.md  HANDOFF_V1_REALIGNMENT.md  NIKOS.md  SPOKANE_BRANCH_CHANGELOG_AND_PLAN_GAPS.md  SPOKANE_FINAL_ENGINEERING_REVIEW.md  V1_CODEX_REVIEW.md  V1_FINAL_VERIFICATION.md  architecture.md  benchmark_methodology.md  caching.md  composio-token-efficiency-layer.md  output_compression.md  project_plan_status.md  roadmap.md  schema_optimization.md  security_privacy.md  technical.md  token_attribution.md  workbench_boundary.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
ralph/: afk.sh  once.sh  prompt.md
reports/: benchmark_metrics.json  benchmark_report.md  cache_report.md  compression_report.md  raw_token_baseline.md  schema_optimization_report.md
scripts/: _seed_tool_list.json  benchmark.py  demo.py  demo_mock_datasets.py  dynamic_agent_demo.py  honest_comparison.py  record_demo.sh  secret_scan.py  seed_cache_policy.py  seed_supabase_customers.py  vanilla_vs_aperture.py
tests/: AGENTS.md  test_cache.py  test_composio_agent_routing.py  test_compression.py  test_config.py  test_demo_cache_panel.py  test_engine_modes.py  test_engine_normalizers.py  test_field_classifier.py  test_field_classifier_cache.py  test_field_policy.py  test_field_profiles.py  test_hydration.py  test_prompt_cache.py  test_quality_gate.py  test_stopwords.py  test_task_profiles.py  test_tokenization.py  test_tokenizer_registry.py  test_toon.py  test_type_group.py  test_vanilla_vs_aperture.py
(+203 files in other folders)
