[project]
name = "aperture"
version = "0.2.0"
description = "Token-efficiency layer for Composio-powered agents"
requires-python = ">=3.11"
dependencies = [
  "composio",
  "tiktoken",
  "pyyaml",
  "orjson",
  "rich",
  "typer",
  "fastapi",
  "uvicorn[standard]",
  "upstash-redis",
  "pandas",
  "python-dotenv",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "httpx",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
