[project]
name = "aperture"
version = "0.3.0"
description = "Token attribution, safe caching, schema description optimization, and an MCP proxy for Composio agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Core
  "composio>=0.8.0",
  "pyyaml>=6.0.0",
  "tiktoken>=0.7.0",
  "redis>=5.0.0",
  # MCP proxy (Phase 0.4 onward)
  "mcp>=1.9.4",
  "httpx>=0.27.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  # SQLite event log (Phase 3)
  "aiosqlite>=0.20.0",
  # Anthropic tokenizer + LLM judge (opt-in for tokenizer; required for validator)
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.7.0",
]

[project.scripts]
aperture-benchmark = "aperture.cli:benchmark_main"
aperture-connect = "aperture.cli:connect_main"
aperture-live-check = "aperture.cli:live_check_main"
aperture-schema-report = "aperture.cli:schema_report_main"
# Phase 0.4: aperture-proxy = "aperture.proxy.__main__:main"
# Phase 5 Week 6: aperture-validator = "aperture.cli:validator_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "live: tests that require live external credentials (legacy)",
  "live_composio: tests that hit live Composio API (skip in CI)",
  "live_anthropic: tests that hit live Anthropic API (skip in CI)",
  "live_redis: tests that hit live Redis instance (skip in CI)",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["aperture*"]

[tool.setuptools.package-data]
aperture = ["**/*.yaml", "**/*.json", "**/*.jsonl"]
